src/test/ui/methods/method-call-lifetime-args-subst-index.stderr
error: compilation successful
  --> $DIR/method-call-lifetime-args-subst-index.rs:15:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

